welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: value getSolCouleur
var couleur = getSolCouleur()
              ^Array1:8: error: not found: value getSolCouleur
getSolCouleur()
^Array1:13: error: not found: value getSolCouleur
	getSolCouleur()
        ^